# Graphics-Project

./: CMakeLists.txt
GraphicsProject/: CMakeLists.txt
GraphicsProject/assets/models/spire/: spire.gltf
GraphicsProject/src/: Boid.cpp  Camera.cpp  Generator.cpp  Illumination.cpp  Main.cpp  Mesh.cpp  Model.cpp  SPH.cpp  Skybox.cpp  Spawn.cpp  Terrain.cpp  shader.cpp
GraphicsProject/src/headers/: Boid.h  Camera.h  Generator.h  Illumination.h  Main.h  Mesh.h  Model.h  SPH.h  Skybox.h  Spawn.h  Terrain.h  shader.h
GraphicsProject/src/shaders/: default.frag  default.vert  depth.gs  depth.vert  roads.frag  roads.vert  skybox.frag  skybox.vert  spawn.frag  spawn.vert  spawnDepth.vert  sph.frag  sph.vert
